# simpar

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: release-plz.yml
examples/aoc_2023_day8/: main.rs
examples/aoc_2025_day5/: main.rs
simpar-macros/: Cargo.toml
simpar-macros/src/: lib.rs  parse.rs
src/: lib.rs
tests/: test.rs
