[package]
name = "simpar"
version = { workspace = true }
edition = { workspace = true }
description = "A simple declarative string parser using string operations from the standard library"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
keywords = ["parser", "string", "macro", "proc-macro"]
categories = ["parsing", "parser-implementations"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Pascal Schulze"]
repository = "https://github.com/p-314/simpar"


[workspace]
members = ["simpar-macros"]

[dependencies]
simpar-macros = { path = "simpar-macros", features = ["macros"] }
