[package]
name = "simpar-macros"
version = "0.1.0"
edition = { workspace = true }
description = "simpar's proc macros"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[features]
default = []
macros = []

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
